--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta  name="viewport" content="with=", initial-scale="1.0">
     <title>hello word</title>
-    </head>
-    <body>
-
+    <style>
+    bod
+     </style>
     <header>
+    <body>
+    </h1>hello world!</h1>
+    <p> Que bom te ver por aqui, <span id="nome-usuário"> fulano<span></span>/p>
+
+    </body>
+    </html>
