--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
     <header>
     <body>
     </h1>hello world!</h1>
-    <p> Que bom te ver por aqui, <span id="nome-usuário"> fulano<span></span>/p>
+   <p>maquinario agricula para venda</p>
+   pO mercado de máquinas agrícolas está em constante evolução, impulsionado pela necessidade de aumentar a produtividade e a eficiência no campo. 
+   A venda desses equipamentos, que incluem tratores, colheitadeiras, pulverizadores e implementos diversos, é um pilar fundamental para o desenvolvimento do
+    agronegócio.
+
+Uma das principais características desse mercado é a sua diversidade. As vendas podem ocorrer de diferentes formas: por meio de concessionárias autorizadas,
+ revendas multimarca, leilões ou até mesmo diretamente entre produtores. Essa variedade atende a distintos perfis de compradores, desde o pequeno agricultor 
+ familiar que busca um trator usado até grandes fazendas que investem em tecnologia de ponta.
+
+O processo de venda de máquinas agrícolas vai muito além da simples transação comercial. Envolve uma análise detalhada das necessidades do cliente, levando em 
+conta o tipo de cultura, o tamanho da propriedade e as condições de solo e clima. O vendedor atua como um consultor, apresentando soluções que realmente agreguem
+ valor e otimizem a operação no campo.
+
+Além disso, a pós-venda é um fator decisivo. A manutenção, a disponibilidade de peças de reposição e o suporte técnico são serviços que garantem a longevidade 
+e o bom funcionamento do equipamento, criando uma relação de confiança e fidelidade com o cliente.
+
+Em um cenário onde a agricultura está cada vez mais conectada e tecnológica, a venda de máquinas agrícolas se alinha com as inovações da Agricultura 4.0.
+ Equipamentos com sistemas de GPS, sensores de telemetria e softwares de gestão de frota se tornaram um diferencial competitivo, permitindo um manejo mais
+  preciso e sustentável da terra. Vender essas máquinas é, portanto, vender tecnologia, produtividade e a promessa de um futuro mais eficiente para 
+  o agronegócio.
 
     </body>
     </html>
