--- a/index.html
+++ b/index.html
@@ -32,4 +32,8 @@ Em um cenário onde a agricultura está cada vez mais conectada e tecnológica, 
   o agronegócio.
 
     </body>
+
+    <img src="imagem/01.jpeg" alt="imagem01" srcset="">
+    <img src="imagem/02.jpeg" alt="imagem02" srcset="">
+    <img src="imagem/03.jpeg" alt="imagem03" srcset="">
     </html>
