--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Em um cenário onde a agricultura está cada vez mais conectada e tecnológica, 
 
     </body>
 
-    <img src="imagem/01.jpeg" alt="imagem01" srcset="">
-    <img src="imagem/02.jpeg" alt="imagem02" srcset="">
-    <img src="imagem/03.jpeg" alt="imagem03" srcset="">
+    <img src="imagem/imagem01.jpg"imagem01" srcset="">
+    <img src="imagem/imagem02.jpg" alt="imagem02" srcset="">
+    <img src="imagem/imagem03.jpg" alt="imagem03" srcset="">
     </html>
