--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
     </h1>hello world!</h1>
    <p>maquinario agricula para venda</p>
-   pO mercado de máquinas agrícolas está em constante evolução, impulsionado pela necessidade de aumentar a produtividade e a eficiência no campo. 
+   Para o  mercado de máquinas agrícolas está em constante evolução, impulsionado pela necessidade de aumentar a produtividade e a eficiência no campo. 
    A venda desses equipamentos, que incluem tratores, colheitadeiras, pulverizadores e implementos diversos, é um pilar fundamental para o desenvolvimento do
     agronegócio.
 
